css alignment issues

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -8,41 +8,75 @@ and (min-device-width : 320px)
 and (max-device-width : 480px) {
 	input,select,textarea,a{
 		text-align: center;
-	  	font-size:100%;
+	  	font-size:105%;
 	   	height: 20%;
-		width: 65%;
+		width: 100%;
 		font-family: ‘Times New Roman’, Times, serif;
+	}
+	
+	h1 {
+		margin-left: 0px auto;
+		text-align: center;
+		font-size:130%;
+	}
+	
+	h3 {
+		font-size:75%;
+	}
+	
+	.loginContainer {
+		width:100%;
+		margin:30% auto;
 	}
 }
 
 /* Desktops and laptops ----------- */
 @media only screen 
 and (min-width : 1224px) {
-	input,select,textarea,a{
+	
+	h1 {
+		margin-left: 0px auto;
+		text-align: center;
+		font-size:300%;
+	}
+	
+	input,select,textarea,a {
 		text-align: center;
 	  	font-size:200%;
 	   	height: 20%;
 		width: 65%;
 		font-family: ‘Times New Roman’, Times, serif;
 	}
+	
+	h3 {
+		font-size:150%;
+	}
+	
+	.loginContainer {
+		width:100%;
+		margin:15% auto;
+	}
 }
 
+
 /*Login page style starts*/
-.signuplink{
+.signuplink {
 	padding-top:5%;
 }
+
 .loginError {
 	color:red;	
 }
+
 /*Login page style ends*/
+
 /*Signup page style starts*/
 .signupDiv {
 	padding-top:1%;
 	width: 75%;
+	margin: 0% auto;
 }
-.loginContainer {
-	width:100%"
-}
+
 .signupButton {
 	padding-top:1%;
 }
@@ -52,8 +86,22 @@ and (min-width : 1224px) {
 .successSignup{
 	padding-top:25%;
 }
-/* .signupInput {
-	height: 25px;
-	width: 50%;
-} */
-/*Signup page style starts*/
+/*Signup page style ends*/
+
+/*Home page style starts*/
+.homeContainer {
+	width:80%;
+	padding-left: 18%;
+	margin: 0px auto;
+}
+.searchContainer{
+	width:80%;
+	text-align:center;
+	padding-top: 3%;
+}
+
+.searchContainer select, .searchContainer input {
+	width:48% ;
+}
+
+/*Home page style ends*/
